[package]
name = "dioxus-fluent"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/dioxus-hooks"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
dioxus = "0.3.2"
fluent = "0.16.0"
gloo-events = "0.1.2"
log = "0.4.17"
unic-langid = "0.9.1"
#futures = "0.3.21"

[dependencies.web-sys]
version = "0.3.61"
features = ["Window", "UiEvent"]


[dev-dependencies]

[features]
default = []

[package.metadata.wee]
t = "cargo test"
p = "cargo publish --allow-dirty"
