[package]
name = "dioxus-hooks"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "..."
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
dioxus = "0.1.8"
gloo-events = "0.1.1"

[dependencies.web-sys]
version = "0.3.56"
features = ["Window", "UiEvent"]


[dev-dependencies]

[features]
default = []

[package.metadata.wee]
t = "cargo test"
p = "cargo publish --allow-dirty"
