[package]
name = "dioxus-hooks-plus"
version = "0.2.1"
authors = ["Aster <192607617@qq.com>"]
description = "Additional hooks for dioxus"
repository = "https://github.com/oovm/dioxus-hooks"
documentation = "https://docs.rs/dioxus-hooks-plus"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
dioxus-use-window = {version ="0.7.*", path = "../dioxus-use-window"}
dioxus-use-clipboard = {version ="0.1.*", path = "../dioxus-use-clipboard", optional = true}
dioxus-use-cursor = {version ="0.2.*", path = "../dioxus-use-cursor"}
dioxus-use-storage = {version ="0.3.*", path = "../dioxus-use-storage"}

[dev-dependencies]

[features]
default = []
unstable = ["dioxus-use-clipboard"]

[package.metadata.wee]
t = "cargo test"
p = "cargo publish --allow-dirty"
