[package]
name = "dioxus-test"
publish = false
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "..."
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
#dioxus = { version = "0.1.8", features = ["desktop"] }
dioxus = { version = "0.1.8", features = ["web"] }
dioxus-hooks = { version = "*", path = "../dioxus-hooks" }
wasm-logger = "0.2.0"

[dev-dependencies]

[features]
default = []

[package.metadata.wee]
t = "cargo test"
p = "cargo publish --allow-dirty"
