[package]
name = "dioxus-use-clipboard"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "`use_clipboard` hooks for dioxus"
repository = "https://github.com/oovm/dioxus-hooks"
documentation = "https://docs.rs/dioxus-use-clipboard"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
dioxus = "0.2.4"
gloo-events = "0.1.2"
log = "0.4.17"
#futures = "0.3.21"

[dependencies.web-sys]
version = "0.3.57"
features = ["Window", "Clipboard", "Navigator"]

[dev-dependencies]

[features]
default = []

[package.metadata.wee]
t = "cargo test"
p = "cargo publish --allow-dirty"
