[package]
name = "dioxus-use-document"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "`use_head` hooks for dioxus"
repository = "https://github.com/oovm/dioxus-hooks"
documentation = "https://docs.rs/dioxus-use-head"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
dioxus = "0.2.4"
gloo-events = "0.1.2"
log = "0.4.17"
wasm-bindgen = "0.2.80"

[dependencies.web-sys]
version = "0.3.57"
features = ["Window", "Navigator", "Document", "DocumentType", "MutationObserver"]

[dev-dependencies]

[features]
default = []

[package.metadata.wee]
t = "cargo test"
p = "cargo publish --allow-dirty"
