[package]
name = "dioxus-use-window"
version = "0.7.0"
authors = ["Aster <192607617@qq.com>"]
description = "`use_window` hooks for dioxus"
repository = "https://github.com/oovm/dioxus-hooks"
documentation = "https://docs.rs/dioxus-use-window"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
dioxus = "0.3.2"
gloo-events = "0.1.2"
log = "0.4.17"
wasm-bindgen = "0.2.84"

[dependencies.web-sys]
version = "0.3.61"
features = ["Window", "Document", "Element", "HtmlElement"]


[dev-dependencies]

[features]
default = []
